fix contact links

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,10 @@ footer {
   font-size: 1.2rem;
 }
 
+.social-mobile {
+  display: none;
+}
+
 /* MEDIA QUERY */
 
 @media (max-device-width: 480px) {
@@ -163,6 +167,7 @@ footer {
     top: inherit;
     left: inherit;
     transform: none;
+    padding-top: 3rem;
   }
 
   .about-me h2,
@@ -177,12 +182,16 @@ footer {
     margin-bottom: 1rem;
   }
 
-  .social ul li {
-    display: block;
-    margin: 1.2rem 0.3rem;
+  .contact {
+    height: 30vh;
   }
 
-  .contact {
-    padding-bottom: 3rem;
+  .social {
+    display: none;
+  }
+
+  .social-mobile {
+    display: block;
+    font-size: 2rem;
   }
 }
